z-index for fixed header

--- a/src/app/styles/header.scss
+++ b/src/app/styles/header.scss
@@ -5,6 +5,8 @@
 
   background: #ffffff;
 
+  z-index: 30;
+
 
   &__wrapper {
     max-height: 90px;
